--- a/pages/movies.module.css
+++ b/pages/movies.module.css
@@ -3,7 +3,8 @@
 .container {
   position: relative;
   display: flex;
-  align-items: stretch;
+  flex-direction: row;
+  justify-content: space-evenly;
 }
 
 .search {
